--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                     <a class="nav-link" href="#">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack
-                    </a>
+                    <a class="nav-link" href="#">Backpack</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Subscribe</a>
@@ -61,42 +60,42 @@
                                     <div class="div">
                                         <h2>Mega LCD TV For Sports</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
-                                        <h1>$1200</h1>
-                                        <button class="btn btn-danger">Buy Now</button>
+                                        <h1 class="text_color">$1200</h1>
+                                        <button class="btn btn-danger-buy_now">Buy Now</button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
-                                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="banner_image">
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item rounded panda-bg-info active p-5">
+                        <div class="carousel-item rounded panda-bg-info p-5">
                             <div class="row">
                                 <div class="col-sm-12 col-md-7 d-flex align-items-center ps-5">
                                     <div class="div">
                                         <h2>X-Box for your living room</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
-                                        <h1>$600</h1>
-                                        <button class="btn btn-danger">Buy Now</button>
+                                        <h1 class="text_color">$600</h1>
+                                        <button class="btn btn-danger-buy_now">Buy Now</button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
-                                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="banner_image">
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item rounded panda-bg-info active p-5">
+                        <div class="carousel-item rounded panda-bg-info p-5">
                             <div class="row">
                                 <div class="col-sm-12 col-md-7 d-flex align-items-center ps-5">
                                     <div class="div">
                                         <h2>Cool Dude Headphone</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
-                                        <h1>$420</h1>
-                                        <button class="btn btn-danger">Buy Now</button>
+                                        <h1 class="text_color">$420</h1>
+                                        <button class="btn btn-danger-buy_now">Buy Now</button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
-                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="banner_image">
                                 </div>
                             </div>
                         </div>
@@ -114,6 +113,38 @@
             
         </section>
         <!-- banner section emd -->
+        <!-- Categories section start -->
+        <section>
+            <div class="container  my-5">
+                <h3 class="pb-4">Categories</h3>
+                <div class="row g-4">
+                    <!-- Categories -1 -->
+                    <div class="clo-12 col-md-6 col-lg-4 categories">
+                        <div class="p-3 d-flex justify-content-between align-items-center rounded-4 ct-1">
+                            <h1>Watch</h1>
+                            <img src="images/categories/watch.png" alt="Cetagoroes">
+                        </div>
+                    </div>
+                    <!-- Categories -2 -->
+                    <div class="clo-12 col-md-6 col-lg-4 categories">
+                        <div class="p-3 d-flex justify-content-between align-items-center rounded-4 ct-2">
+                            <h1>Bag</h1>
+                            <img src="images/categories/bag.png" alt="Cetagoroes">
+                        </div>
+                    </div>
+                    <!-- Categories -3 -->
+                    <div class="clo-12 col-md-6 col-lg-4 categories">
+                        <div class="p-3 d-flex justify-content-between align-items-center rounded-4 ct-3">
+                            <h1>Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="Cetagoroes">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Categories section end -->
+        <!-- Shoes Section start -->
+        <!-- Shoes Section End -->
 
     </main>
 
