--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
         <nav id="navbar"class="navbar navbar-expand-lg bg-light">
             <div class="container">
-              <a class="navbar-brand " href="#"><img src="images/logo.png" alt=""></a>
-              <form class="d-flex w-50 align-items-center position-relative" role="search">
+                <a class="navbar-brand " href="#"><img src="images/logo.png" alt=""></a>
+                <form class="d-none d-sm-flex w-50 align-items-center position-relative" role="search">
                 <input class="form-control  me-2 rounded-pill " type="search" placeholder="Search" aria-label="Search">
                 <i class="bi bi-search position-absolute top-50 start-50 translate-middle"></i>
               </form>
@@ -61,7 +61,7 @@
                                         <h2>Mega LCD TV For Sports</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                                         <h1 class="text_color">$1200</h1>
-                                        <button class="btn btn-danger-buy_now">Buy Now</button>
+                                        <button class="btn btn-danger-buy_now">Buy Now <i class="bi bi-arrow-right"></i></button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
@@ -76,7 +76,7 @@
                                         <h2>X-Box for your living room</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                                         <h1 class="text_color">$600</h1>
-                                        <button class="btn btn-danger-buy_now">Buy Now</button>
+                                        <button class="btn btn-danger-buy_now">Buy Now <i class="bi bi-arrow-right"></i></button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
@@ -91,7 +91,7 @@
                                         <h2>Cool Dude Headphone</h2>
                                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
                                         <h1 class="text_color">$420</h1>
-                                        <button class="btn btn-danger-buy_now">Buy Now</button>
+                                        <button class="btn btn-danger-buy_now">Buy Now <i class="bi bi-arrow-right"></i></button>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-5">
@@ -144,7 +144,101 @@
         </section>
         <!-- Categories section end -->
         <!-- Shoes Section start -->
+        <section id="shoes_sec">
+            <div class="container my-5">
+                <h3 class="pb-4">Shoes</h3>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                          <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                          <h3>$1289</h3>
+                        </div>
+                        <div class="m-3">
+                          <div class="btn btn-danger-buy_now">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reebok Pump</h5>
+                          <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                          <h3>$799</h3>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-danger-buy_now">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Reebok All Terrain</h5>
+                          <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                          <h3>$699</h3>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-danger-buy_now">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
         <!-- Shoes Section End -->
+        <!-- Backpack Section start -->
+        <section id="Backpack_sec">
+          <div class="container my-5">
+              <h3 class="pb-4">Backpack</h3>
+              <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                  <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                      <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Ison Backpack</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                        <h3>$1289</h3>
+                      </div>
+                      <div class="m-3">
+                        <div class="btn btn-danger-buy_now">Buy Now</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                      <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Biaowang Backpack</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                        <h3>$799</h3>
+                      </div>
+                      <div class="m-3">
+                          <div class="btn btn-danger-buy_now">Buy Now</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                      <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                        <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                        <h3>$699</h3>
+                      </div>
+                      <div class="m-3">
+                          <div class="btn btn-danger-buy_now">Buy Now</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          </div>
+      </section>
+      <!-- Backpacks Section End -->
 
     </main>
 
