--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes_sec">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Backpack_sec">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe_sec">Subscribe</a>
                   </li>
                 </ul>
                
@@ -239,9 +239,25 @@
           </div>
       </section>
       <!-- Backpacks Section End -->
+      <!-- Subscribe section start -->
+      <section id="subscribe_sec">
+        <div class="container d-flex rounded-3 justify-content-center align-items-center">
+          <div>
+            <h2 >LET'S STAY IN TOUCH</h2>
+            <p>Get updates on sales specials and more</p>
+            <form class="d-flex">
+                <input type="email" class="form-control rounded-0 rounded-start " id="exampleInputEmail1" aria-describedby="emailHelp">
+                <button type="submit" class="btn btn-danger-buy_now rounded-0 rounded-end">Submit</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <!-- Subscribe section End -->
 
     </main>
-
+<footer class="mt-5 text-center">
+   <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
+</footer>
     <!-- bootstrap js start -->
     <script src="js/bootstrap.min.js"></script>
     <!-- bootstrap js End -->
