--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- header section start -->
-    <header>
+    <header class="fixed-top">
         <nav id="navbar"class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand " href="#"><img src="images/logo.png" alt=""></a>
