--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!-- header section start -->
-    <header class="fixed-top">
+    <header class="sticky-top">
         <nav id="navbar"class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand " href="#"><img src="images/logo.png" alt=""></a>
@@ -256,7 +256,7 @@
 
     </main>
 <footer class="mt-5 text-center">
-   <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
+   <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
 </footer>
     <!-- bootstrap js start -->
     <script src="js/bootstrap.min.js"></script>
